.kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joke-angular-ingress
  namespace: joker
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: joke-angular.ubk3s
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: joke-angular-service
            port:
              number: 80
